<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="algonquin.cst2335.finalproject.MainActivity">

        <TextView
            android:id="@+id/cityName"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/city_name"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cityName"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextTextCityName"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:ems="50"
                android:hint="@string/enter_city_name"
                android:importantForAutofill="no"
                android:textAllCaps="true"
                android:inputType="text"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:contentDescription="@string/search_icon"
                android:focusable="true"
                android:src="@drawable/baseline_search_24"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/temperatureBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchBar"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tempDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/temperature_symbol"
                android:textAlignment="center"
                android:textSize="70sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateTimeDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_time"
                android:textAlignment="center"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="250sp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/windSpeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/wind_speed"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/precip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/precip"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/pressure"
                        android:textSize="20sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/weatherIcon"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:contentDescription="@string/app_name"
                        android:padding="20dp"
                        android:src="@drawable/baseline_wb_sunny_24_black" />

                    <TextView
                        android:id="@+id/weatherDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/addCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginTop="30dp"
                android:padding="0dp"
                android:text="@string/add_city"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="VisualLintButtonSize">
            </Button>

            <Button
                android:id="@+id/showCities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginVertical="20dp"
                android:padding="0dp"
                android:text="@string/show_stored_cities"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="VisualLintButtonSize">
            </Button>

            <Button
                android:id="@+id/changeLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:padding="0dp"
                android:text="@string/change_language"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="VisualLintButtonSize">
            </Button>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>