<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:background="@drawable/color1"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cardWeatherIcon"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:scaleX="2.5"
                android:scaleY="2.5"
                android:contentDescription="@string/description"
                android:padding="30dp"
                android:src="@drawable/baseline_wb_sunny_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cardCityName"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginStart="15dp"
                android:gravity="bottom"
                android:text="@string/city_name"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cardTemperature"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/temperature_symbol"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/cardDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_time"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="10dp"/>
    </LinearLayout>

    <!--        <TextView-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:id="@+id/tempdisp"-->
    <!--            android:layout_marginStart="15dp"-->
    <!--            android:text="@string/city_name"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:textSize="20sp"-->
    <!--            android:textAlignment="center"/>-->


    <!--        <TextView-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:id="@+id/temperature"-->
    <!--            android:layout_marginStart="15dp"-->
    <!--            android:text="@string/city_name"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:textSize="20sp"-->
    <!--            android:textAlignment="center"/>-->


</androidx.cardview.widget.CardView>